cif/org.eclipse.escet.cif.tests/tests/event_based/automaton_abstraction/marked_and_nonmarked.run.err
WARNING: File "event_based/automaton_abstraction/marked_and_nonmarked.cif": Semantic warning at line 14, column 7: Automaton "ok1" has no initial location.
WARNING: File "event_based/automaton_abstraction/marked_and_nonmarked.cif": Semantic warning at line 15, column 12: Location "loc1" is not reachable from any of the initial locations of automaton "ok1".
WARNING: File "event_based/automaton_abstraction/marked_and_nonmarked.cif": Semantic warning at line 18, column 12: Location "loc2" is not reachable from any of the initial locations of automaton "ok1".
WARNING: File "event_based/automaton_abstraction/marked_and_nonmarked.cif": Semantic warning at line 21, column 7: Automaton "ok2" has no initial location.
WARNING: File "event_based/automaton_abstraction/marked_and_nonmarked.cif": Semantic warning at line 22, column 12: Location "loc1" is not reachable from any of the initial locations of automaton "ok2".
WARNING: File "event_based/automaton_abstraction/marked_and_nonmarked.cif": Semantic warning at line 25, column 12: Location "loc2" is not reachable from any of the initial locations of automaton "ok2".
WARNING: File "event_based/automaton_abstraction/marked_and_nonmarked.cif": Semantic warning at line 29, column 7: Automaton "only_marked" has no initial location.
WARNING: File "event_based/automaton_abstraction/marked_and_nonmarked.cif": Semantic warning at line 30, column 12: Location "loc1" is not reachable from any of the initial locations of automaton "only_marked".
WARNING: File "event_based/automaton_abstraction/marked_and_nonmarked.cif": Semantic warning at line 33, column 12: Location "loc2" is not reachable from any of the initial locations of automaton "only_marked".
WARNING: File "event_based/automaton_abstraction/marked_and_nonmarked.cif": Semantic warning at line 37, column 7: Automaton "only_non_marked" has no initial location.
WARNING: File "event_based/automaton_abstraction/marked_and_nonmarked.cif": Semantic warning at line 38, column 12: Location "loc1" is not reachable from any of the initial locations of automaton "only_non_marked".
WARNING: File "event_based/automaton_abstraction/marked_and_nonmarked.cif": Semantic warning at line 41, column 12: Location "loc2" is not reachable from any of the initial locations of automaton "only_non_marked".
ERROR: Failed to compute automaton abstraction for CIF file "event_based/automaton_abstraction/marked_and_nonmarked.cif".
CAUSE: CIF automaton abstraction tool failed due to unsatisfied preconditions:

  ------------------------------------------
  (1/3) Automaton has only marked locations.
  ------------------------------------------
   * In the top-level scope of the specification:
     - plant automaton only_marked:
                       ^

  ----------------------------------------------
  (2/3) Automaton has only non-marked locations.
  ----------------------------------------------
   * In the top-level scope of the specification:
     - plant automaton only_non_marked:
                       ^
     - supervisor automaton s:
                            ^

  -------------------------------------------------------------------------
  (3/3) Specification does not have exactly 1 automaton (5 automata found).
  -------------------------------------------------------------------------
